--- a/portfolio/app/css/global.css
+++ b/portfolio/app/css/global.css
@@ -5,8 +5,7 @@ html, body, #root{
   margin: 0; /* Remove default browser margin/padding */
   padding: 0;
 
-  /* Use a standard pointer */
-  cursor: auto; 
+  background-color: rgb(0, 0, 0);
 }
 
 .noSelect {
